<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Biyuyu</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="text_loginButton">Ingresar</string>
    <string name="text_dontHaveAccount">¿Quieres crear una cuenta? Ingresa aquí</string>
    <string name="title_login">Login</string>
    <string name="editText_hint_email">Correo electrónico</string>
    <string name="editText_hint_password">Contraseña</string>
    <string name="lbl_forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="forgot_password_description">Ingresa tu correo y te enviaremos una contraseña nueva</string>
    <string name="button_login">Ingresar</string>
    <string name="register"><u>Registrate</u></string>
    <string name="dont_have_account">¿Quieres una cuenta? Click aquí</string>
    <string name="hint_names">Nombres</string>
    <string name="hint_lastNames">Apellidos</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_phone">Teléfono</string>
    <string name="hint_town">Municipio</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_confirmPassword">Confirmar contraseña</string>
    <string name="button_lbl_register">Registrar</string>
    <string name="you_have_account">¿Tienes una cuenta? Click aquí</string>
    <string name="icon">icon</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="salir">Salir</string>
    <string name="user_info">User Info</string>
    <string name="create_report_fragment">Create Report Fragment</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="tel_fono">Teléfono</string>
    <string name="municipio">Municipio</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="actualizar_usuario">Actualizar usuario</string>
    <string name="fill_all_fields">Por favor, llene todos los campos</string>
    <string name="password_must_be_equal_confirmPassword">Ambas contraseñas deben coincidir</string>
    <string name="dates_inserted_successfully">Tu usuario ha sido creado</string>
    <string name="user_register_failed">El registro de usuario ha fallado</string>
    <string name="please_wait">Por favor espere&#8230;</string>
    <string name="update_user">Actualizar</string>
    <string name="login_success">Has ingresado correctamente</string>
    <string name="login_unsuccess">Lo sentimos, ha habido un error</string>
    <string name="title_forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="reset_password">Restaurar contraseña</string>
    <string name="text_backLogin">Volver al menu de ingreso</string>
    <string name="create_request">Crear solicitud</string>
    <string name="request_title">Título</string>
    <string name="request_description">Descripción</string>

</resources>