<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        tools:context=".ui.UpdateUserFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/updateUserFragment_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="?attr/actionBarTheme"
                    app:titleTextColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:title="Actualiza tu usuario" />

                <ImageView
                    android:id="@+id/homeFromUserInfoUpdateFragment_image"
                    android:contentDescription="@string/icon"
                    android:layout_width="33dp"
                    android:layout_height="34dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/ic_home"
                    app:layout_constraintEnd_toStartOf="@+id/logoutUpdateUserFragment_text"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/logoutUpdateUserFragment_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/nunito_sans"
                    android:text="@string/salir"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <EditText
            android:id="@+id/updateUser_insertNames"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:ems="10"
            android:fontFamily="@font/nunito_sans"
            android:hint="@string/nombres"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/updateUser_insertLastNames"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:fontFamily="@font/nunito_sans"
            android:hint="@string/apellidos"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateUser_insertNames" />

        <EditText
            android:id="@+id/updateUser_insertEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:fontFamily="@font/nunito_sans"
            android:hint="@string/correo_electr_nico"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateUser_insertLastNames" />

        <EditText
            android:id="@+id/updateUser_insertPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:fontFamily="@font/nunito_sans"
            android:hint="@string/tel_fono"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateUser_insertEmail" />

        <EditText
            android:id="@+id/updateUser_insertTown"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:fontFamily="@font/nunito_sans"
            android:hint="@string/municipio"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateUser_insertPhoneNumber" />

        <EditText
            android:id="@+id/updateUser_insertPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:fontFamily="@font/nunito_sans"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateUser_insertTown" />

        <EditText
            android:id="@+id/updateUser_confirmPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:fontFamily="@font/nunito_sans"
            android:hint="@string/confirmar_contrase_a"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateUser_insertPassword" />

        <Button
            android:id="@+id/button_updateUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/actualizar_usuario"
            android:backgroundTint="@color/text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>