<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ForgotPasswordFragment">

        <com.example.biyuyu.utils.MSPTextViewBold
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="124dp"
            android:text="@string/app_name"
            android:textColor="@color/text_color"
            android:textSize="@dimen/splash_title_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.example.biyuyu.utils.MSPTextViewBold
            android:id="@+id/title_forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/title_forgot_password"
            android:textColor="@color/text_color"
            android:textSize="@dimen/forgot_password_title_textSize"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/title_descriptionForgotPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.example.biyuyu.utils.MSPTextView
            android:id="@+id/title_descriptionForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="60dp"
            android:fontFamily="@font/nunito_sans"
            android:gravity="center"
            android:text="@string/forgot_password_description"
            android:textColor="@color/text_color"
            android:textSize="@dimen/forgot_password_title_description_textSize"
            app:layout_constraintBottom_toTopOf="@+id/forgotPasswordTitle_insertEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forgotPasswordTitle_insertEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:hint="@string/hint_email"
            android:textColorHint="@color/text_color"
            app:layout_constraintBottom_toTopOf="@+id/button_forgotPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <com.example.biyuyu.utils.MSPEditText
                android:id="@+id/forgotPassword_insertEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans"
                android:inputType="textEmailAddress"
                android:padding="@dimen/editText_padding"
                android:textColor="@color/text_color"
                android:textSize="@dimen/editText_textSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.example.biyuyu.utils.MSPButton
            android:id="@+id/button_forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="70dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/nunito_sans"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/btn_padding"
            android:paddingBottom="@dimen/btn_padding"
            android:text="@string/reset_password"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/btn_textSize"
            app:layout_constraintBottom_toTopOf="@+id/text_backLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <com.example.biyuyu.utils.MSPTextView
            android:id="@+id/text_backLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/nunito_sans"
            android:padding="@dimen/clickable_text_view_padding"
            android:text="@string/text_backLogin"
            android:textAlignment="viewStart"
            android:textColor="@color/text_color"
            android:textSize="@dimen/lbl_text_view_textSize"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>