<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.CreateRequestFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/createReportFragment_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_background"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="?attr/actionBarTheme"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:title="Crea tu reporte"
                    app:titleTextColor="@color/white" />

                <ImageView
                    android:id="@+id/homeFromCreateReportFragment_image"
                    android:layout_width="35dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/icon"
                    app:layout_constraintEnd_toStartOf="@+id/userInfoCreateReportFragment_image"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_home" />

                <ImageView
                    android:id="@+id/userInfoCreateReportFragment_image"
                    android:layout_width="33dp"
                    android:layout_height="34dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/icon"
                    android:src="@drawable/ic_user_info"
                    app:layout_constraintEnd_toStartOf="@+id/logoutCreateReportFragment_text"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/logoutCreateReportFragment_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/nunito_sans"
                    android:text="@string/salir"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/createRequest_labelTitle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/request_title"
            android:textColorHint="@color/text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout4">

            <com.example.biyuyu.utils.MSPEditText
                android:id="@+id/createRequest_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans"
                android:inputType="text"
                android:padding="@dimen/editText_padding"
                android:textColor="@color/text_color"
                android:textSize="@dimen/editText_textSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/createRequest_labelDescription"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/request_description"
            android:textColorHint="@color/text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createRequest_labelTitle">

            <com.example.biyuyu.utils.MSPEditText
                android:id="@+id/createRequest_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans"
                android:inputType="textMultiLine|textCapSentences"
                android:padding="@dimen/editText_padding"
                android:textColor="@color/text_color"
                android:textSize="@dimen/editText_textSize"
                android:minHeight="200dp"
                android:gravity="start"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.example.biyuyu.utils.MSPButton
            android:id="@+id/button_createRequest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/nunito_sans"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingStart="@dimen/button_padding"
            android:paddingEnd="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:text="@string/create_request"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/button_textSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>