<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        tools:context=".ui.CreateReportFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/createReportFragment_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="?attr/actionBarTheme"
                    app:titleTextColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:title="Crea tu reporte" />

                <ImageView
                    android:id="@+id/homeFromCreateReportFragment_image"
                    android:contentDescription="@string/icon"
                    android:layout_width="35dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintEnd_toStartOf="@+id/userInfoCreateReportFragment_image"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_home" />

                <ImageView
                    android:id="@+id/userInfoCreateReportFragment_image"
                    android:contentDescription="@string/icon"
                    android:layout_width="33dp"
                    android:layout_height="34dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/ic_user_info"
                    app:layout_constraintEnd_toStartOf="@+id/logoutCreateReportFragment_text"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/logoutCreateReportFragment_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/nunito_sans"
                    android:text="@string/salir"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/createReportFragment_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans"
            android:gravity="center"
            android:text="@string/create_report_fragment"
            android:textSize="24sp"
            android:textColor="@color/text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>